--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,11 @@
     <head>
         <title>Page Title</title>
     </head>
-    <body style="background color :blue;">
+    <body style="background-color :blue;">
         <h1>Why Jon Bellion should be your favorite                    
             artiste</h1>
         <p>Well,i don't have to say much,but try him out and you won't regret<br />His songs are transcending. So what are you waiting for.</p>
-        <hr>
+        <hr/>
         <p>
         <h2>
           <b>My Top 5</b>
